@@ -1,5 +1,7 @@
 10/11/25:
 
+- Lift useEffect API fetch to App
+- Lift handleQuantityChange, handleIncrement, handleDecrement, handleManualChange, and addCart to App
 - Fix inputting item quantity and navigating to different page resetting selected amount in Shop
 - Fix typing letters into quantity input displaying NaN
 - Fix clearing out quantity input displaying NaN
